--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.37.1
-pandas==2.2.2
-openpyxl==3.1.5
-xlsxwriter==3.2.0
-python-dateutil==2.9.0.post0
+python-3.12.6
+streamlit
+pandas
+openpyxl
+numpy
+python-dateutil
